PizzaTracker/force-app/main/default/objects/Tennr_Search_Criteria__mdt/Tennr_Search_Criteria__mdt.object-meta.xml
<CustomObject>
    <label>Tennr Search Criteria</label>
    <pluralLabel>Tennr Search Criteria</pluralLabel>
</CustomObject>