PizzaTracker/force-app/main/default/objects/Tennr_Search_Criteria__mdt/fields/Confidence_Level__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Level__c</fullName>
    <label>Confidence Level</label>
    <precision>18</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>