PizzaTracker/force-app/main/default/objects/Tennr_Search_Criteria__mdt/fields/Fuzzy_Match__c.field-meta.xml
<CustomField>
    <fullName>Fuzzy_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you would like searchRecords to return records based on fuzzy match rather than exact match</description>
    <inlineHelpText>Check this box if you would like searchRecords to return records based on fuzzy match rather than exact match</inlineHelpText>
    <label>Fuzzy Match</label>
    <type>Checkbox</type>
</CustomField>