PizzaTracker/force-app/main/default/objects/Tennr_Search_Criteria__mdt/fields/JSON_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>JSON_Field_Name__c</fullName>
    <label>JSON Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>