PizzaTracker/force-app/main/default/objects/Tennr_Search_Criteria__mdt/fields/LevDistance__c.field-meta.xml
<CustomField>
    <fullName>LevDistance__c</fullName>
    <label>LevDistance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>