PizzaTracker/force-app/main/default/objects/Tennr_Search_Criteria__mdt/fields/Opening_Character_Match__c.field-meta.xml
<CustomField>
    <fullName>Opening_Character_Match__c</fullName>
    <label>Opening Character Match</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>