PizzaTracker/force-app/main/default/objects/Tennr_Search_Criteria__mdt/fields/Payload_Object__c.field-meta.xml
<CustomField>
    <fullName>Payload_Object__c</fullName>
    <label>Payload Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>