PizzaTracker/force-app/main/default/objects/Tennr_Search_Criteria__mdt/fields/Tennr_Search_Object__c.field-meta.xml
<CustomField>
    <fullName>Tennr_Search_Object__c</fullName>
    <label>Tennr Search Object</label>
    <referenceTo>Tennr_Search_Object__mdt</referenceTo>
    <relationshipLabel>Tennr Search Criteria</relationshipLabel>
    <relationshipName>Tennr_Search_Criteria</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>